Add in select as an option for comments. Create lots of minor updates.

--- a/index.html
+++ b/index.html
@@ -175,6 +175,10 @@
             <label>Multiple import errors
                 <input type="checkbox" onchange="updateComment()" data-idx="9"/>
             </label>
+
+            <label>Uploaded video to GitHub
+                <input type="checkbox" onchange="updateComment()" data-idx="10"/>
+            </label>
         </div>
 
         <div id="text">
