Update style so entire left section is usable no matter how many comments. Lots of content updates.

--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
         #feedbackEntry{
             display: flex;
             flex-direction: column;
+            height: 100vh;
+            padding: 35px 0;
+            overflow-y: auto;
         }
         h3{
             margin-top: 15px;
@@ -180,7 +183,7 @@
         <button id="copyBtn" onclick="copy()">Copy</button>
     </div>
 
-    <script src="github.js"></script>
+    <script src="commonComments.js"></script>
     <script src="./rubrics/fsf01.js"></script>
     <script src="./rubrics/fsf02.js"></script>
     <script src="./rubrics/fsf03.js"></script>
