--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
                 <option value="04">Module 04</option>
                 <option value="05">Module 05</option>
                 <option value="06">Module 06</option>
+                <option value="07">Module 07</option>
                 <option value="09">Module 09</option>
                 <option value="10">Module 10</option>
                 <option value="11">Module 11</option>
@@ -179,6 +180,10 @@
             <label>Uploaded video to GitHub
                 <input type="checkbox" onchange="updateText()" data-idx="10"/>
             </label>
+
+            <label>No access to video
+                <input type="checkbox" onchange="updateText()" data-idx="11"/>
+            </label>
         </div>
 
         <h3 class="plagHide">Module Comments</h3>
@@ -227,7 +232,9 @@
     <script src="./rubrics/fsf19.js"></script>
     <script src="./rubrics/fsf20.js"></script>
     <script src="./rubrics/fsf21.js"></script>
+    <script src="./rubrics/fe03.js"></script>
     <script src="./rubrics/fe04.js"></script>
+    <script src="./rubrics/fe07.js"></script>
     <script src="index.js"></script>
 </body>
 </html>
